	Added to world options, isDefault (use default settings in config), as well as per world permissions, ignore ids, and unclaimed zone names.
	Fixed MobRemoval.
	Moved some help commands around.
v0.23:
	Updated Essentials extensibility to use the proper plugin.
	Added option to disable removing a town/nation on monarch death.
	Small grammar edit for when setting permissions.
v0.24:
	Fixed the logic error with loading permissions.
v0.25:
	Finished TownyWorld commands.
v0.26:
	All damage within non PvP zones is negated.
	Update for latest API change.
v0.27:
	Mayor's can no longer leave the town (must choose a replacement first).
	Changed a few config names DATABASE_LOAD, DATABASE_SAVE
	Flatfile backup is is now zipping the entire Towny folder. 3 options now in config flatfile_backup = [zip/folder/none].
v0.28:
	Ability to convert from hMod database. http://towny.xshade.ca/help/converting-from-hmod
	Possible fix for permission persistency bug.
	Logic error where town mayor and assistents where charged taxes.
v0.29:
	New default aliases for commands seeing as how Essentials keeps stealing them all.
		The commands /r, /t, and /n are still there, however there are second to Essentials (IE: they will work when it's not installed).
		/resident = /player,/p,/res,/r
		/town = /t
		/nation = /nat,/n
		Towny, Plot and Townyadmin (/ta) remain the same.
	Changed command config keys from the suffix _COMMANDS to the prefix COMMANDS_ so as to group them all.
v0.30:
	Changed towny.spawntp -> towny.publicspawntp, this permission has to do with teleporting to other towns.
	New permission towny.spawntp will be relative to your own town.
	Town has new property: /town set public [on/off]. This will toggle if you allow non-residents to use your warp, and also hides you Homeblock location from the town status.
v0.31:
	Players are properly taxed when using /town spawn
	
TODO:	
	Ability to make NPC Residents profiles (not actual human entities). /townyadmin set mayor [town] npc