@@ -85,6 +85,7 @@ public class PlayerCache {
 	
 	public enum TownBlockStatus {
 		UNKOWN,
+		OFF_WORLD, // In a world untouched by towny.
 		ADMIN,
 		UNCLAIMED_ZONE,
 		WARZONE,
