@@ -116,6 +116,8 @@ v0.30:
 	Town has new property: /town set public [on/off]. This will toggle if you allow non-residents to use your warp, and also hides you Homeblock location from the town status.
 v0.31:
 	Players are properly taxed when using /town spawn
+	Added option to ignore all interactions with towny in certain worlds.
+		/tw set usingtowny [on/off]
 	
 TODO:	
 	Ability to make NPC Residents profiles (not actual human entities). /townyadmin set mayor [town] npc
